--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <!-- <i class="fa-solid fa-code"></i> -->
           <h2>
             Hi, my name is <br />
-            <h1>Sagar Wankhade</h1>
+            <h1>Sagar A Wankhade</h1>
           </h2>
 
           <h2 class="slide_text">Full-Stack Web Developer</h2>
