--- a/index.html
+++ b/index.html
@@ -91,23 +91,16 @@
             <h2 class="about__title">About Me</h2>
             
             <p>
-             Sagar Sagar Sagar Sagar Sagar Sagar Sagar Sagar Sagar Sagar
-              Sagar Sagar Sagar Sagar Sagar Sagar Sagar Sagar Sagar Sagar
-              Sagar Sagar Sagar Sagar
-              <span>problem-solver</span>, an Sagar Sagar, and I pay
-              close attention to details.
+
+             Enthusiastic Full-Stack Developer with more than <span>1500+ hours</span> of coding and <span>1200+ hours</span> of DSA hands on practice.
+             Like to solve Data Structure and Algorithims problems. 
             </p>
             <br />
             <p>
-              Working on challenging projects with inspiring individuals and
-              being interested in the entire frontend spectrum.
+              Looking forward to work with an organisation where I can enhance my skills as a developer.
             </p>
             <br />
-            <p>
-              I like to Sagar Sagar and I am anSagar Sagar and TV series fan.
-              <span>Sagar Sagar</span> is what <span>matters most</span> to me as a
-              Sagar Sagar and Sagar Sagar
-            </p>
+            
 
             <a href="#contact" class="portfolio__btn"
               >Let's Make Something Special</a
