--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       crossorigin="anonymous"
     ></script>
     <!-- Google Fonts -->
+    <link
+  rel="stylesheet"
+  href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css"
+/>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -127,40 +131,21 @@
         <h6></h6>
         <h2 class="about__title">My Statistics</h2>
         <div class="statsIMG">
-          <img src="/GitStats.png" alt="">
-          <img src="/GitLang.png" alt="">
+          <img  src="/GitStats.png" alt="">
+          <img  src="/GitLang.png" alt="">
         </div>
       </div>
     </section>
 
     <!-- GitCalender Section -->
-    <section id="caldender">
+    <section>
       <div class="container">
         <h6></h6>
         <h2 class="about__title">My Calender</h2>
-        <script
-  src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js">
-</script>
-<link
-  rel="stylesheet"
-  href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css"
-/>
-<div class="calendar" 
-
- id="gitCalender">
-    Loading the data just for you.
-</div>
-<script>
-    GitHubCalendar(".calendar", "sagar1079", { responsive: true });
-
-    const username="sagar1079"
-
-    GitHubCalendar(".calendar", "sagar1079", {
-       proxy (username) {
-         return fetch(`https://your-proxy.com/github?user=${username}`)
-       }
-    }).then(r => r.text())
-</script>
+      </div>
+        <div class="calendar">
+          <!-- Loading stuff -->
+          Loading the data just for you.
       </div>
     </section>
 
@@ -324,5 +309,21 @@
     
   </body>
   <script src="main.js"></script>
+  <script
+  src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js">
+</script>
+<script>
+  GitHubCalendar(".calendar", "sagar1079");
+
+  // or enable responsive functionality:
+  GitHubCalendar(".calendar", "sagar1079", { responsive: true });
+
+  // Use a proxy
+  GitHubCalendar(".calendar", "sagar1079", {
+     proxy (sagar1079) {
+       return fetch(`https://your-proxy.com/github?user=${sagar1079}`)
+     }
+  }).then(r => r.text())
+</script>
   <!-- Form Script -->
 </html>
