--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="s__logo.png" type="image/png" />
+    <link rel="icon" href="img/s__logo.png" type="image/png" />
   </head>
   <body>
     <header>
@@ -49,7 +49,7 @@
         <nav>
           <!-- <a class="logo" href=""><span>Dani</span>jel S.</a> -->
           <a class="logo" href="#"
-            ><img class="slidein" src="s__logo.png" alt="logo"
+            ><img class="slidein" src="img/s__logo.png" alt="logo"
           /></a>
           <ul id="sideMenu">
             <li><a href="#">Home</a></li>
@@ -131,8 +131,8 @@
         <h6></h6>
         <h2 class="about__title">My Statistics</h2>
         <div class="statsIMG">
-          <img  src="/GitStats.png" alt="">
-          <img  src="/GitLang.png" alt="">
+          <img  src="img/GitStats.png" alt="">
+          <img  src="img/GitLang.png" alt="">
         </div>
       </div>
     </section>
@@ -163,7 +163,7 @@
 
           <div class="individualProjects">
             <div class="portfolio__worklist-work">
-              <img src="asos.png" alt="Shine" />
+              <img src="img/asos.png" alt="Shine" />
               <div class="portfolio__worklist-layer">
                 <h2>Asos Clone</h2>
               </div>
@@ -171,19 +171,20 @@
             <div class="projectIcons">
               <a href="https://github.com/Sagar1079/asos_project" target="_blank"
               ><i class="fa-brands fa-github"></i
-            ></a><h1>Asos Clone</h1><a href="https://stirring-marzipan-5d4585.netlify.app" target="_blank"
+            ></a><h2>Asos Clone</h2><a href="https://stirring-marzipan-5d4585.netlify.app" target="_blank"
               ><i class="fa-solid fa-arrow-up-right-from-square"></i
             ></a>
           </div>
-            <h3>Indeed.com is India's Leading Online Job and Recruitment Portal</h3>
-            <h4><span>Tech Stack:</span>React | Javascript | Html | CSS</h4>
+            <h4>Asos.com is a complete fashion and attire speacialist website,
+              on which I have developed cart and payment checkout page.</h4>
+            <h4><span>Tech Stack:</span>Javascript | Html | CSS</h4>
           </div>
 
 
 
           <div class="individualProjects">
             <div class="portfolio__worklist-work">
-              <img src="blindBeauty.png" alt="Shine" />
+              <img src="img/blindBeauty.png" alt="Shine" />
               <div class="portfolio__worklist-layer">
                 <h2>Blind Beauty</h2>
               </div>
@@ -191,11 +192,13 @@
             <div class="projectIcons">
               <a href="https://github.com/Sagar1079/legit-dust-8169" target="_blank"
               ><i class="fa-brands fa-github"></i
-            ></a><h1>Blind Beauty</h1><a href="https://cute-clafoutis-8268f6.netlify.app" target="_blank"
+            ></a><h2>Blind Beauty</h2><a href="https://cute-clafoutis-8268f6.netlify.app" target="_blank"
               ><i class="fa-solid fa-arrow-up-right-from-square"></i
             ></a>
           </div>
-            <h3>Indeed.com is India's Leading Online Job and Recruitment Portal</h3>
+            <h4>Blind Beauty is a cosmetic website,
+              on which I have developed
+               a signup/login page and a products page.</h4>
             <h4><span>Tech Stack:</span>React | Javascript | Html | CSS</h4>
           </div>
 
@@ -203,7 +206,7 @@
 
           <div class="individualProjects">
             <div class="portfolio__worklist-work">
-              <img src="indeed.png" alt="Shine" />
+              <img src="img/indeed.png" alt="Shine" />
               <div class="portfolio__worklist-layer">
                 <h2>Indeed Clone</h2>
               </div>
@@ -211,11 +214,12 @@
             <div class="projectIcons">
               <a href="https://github.com/Sagar1079/right-chickens-9363" target="_blank"
               ><i class="fa-brands fa-github"></i
-            ></a><h1>Indeed Clone</h1><a href="https://strong-rolypoly-7a7c64.netlify.app" target="_blank"
+            ></a><h2>Indeed Clone</h2><a href="https://strong-rolypoly-7a7c64.netlify.app" target="_blank"
               ><i class="fa-solid fa-arrow-up-right-from-square"></i
             ></a>
           </div>
-            <h3>Indeed.com is India's Leading Online Job and Recruitment Portal</h3>
+            <h4>Indeed.com is Online Job and Recruitment Portal,
+              on which I have developed signup/login functionality.</h4>
             <h4><span>Tech Stack:</span>React | Javascript | Html | CSS</h4>
           </div>
 
@@ -223,7 +227,7 @@
           
           <div class="individualProjects">
           <div class="portfolio__worklist-work">
-            <img src="shine.png" alt="Shine" />
+            <img src="img/shine.png" alt="Shine" />
             <div class="portfolio__worklist-layer">
               <h2>Shine Clone</h2>
             </div>
@@ -231,11 +235,13 @@
           <div class="projectIcons">
             <a href="https://github.com/Sagar1079/massive-things-7112" target="_blank"
             ><i class="fa-brands fa-github"></i
-          ></a><h1>Shine Clone</h1><a href="https://bright-manatee-d1b8be.netlify.app" target="_blank"
+          ></a><h2>Shine Clone</h2><a href="https://bright-manatee-d1b8be.netlify.app" target="_blank"
             ><i class="fa-solid fa-arrow-up-right-from-square"></i
           ></a>
         </div>
-          <h3>Shine.com is India's Leading Online Job and Recruitment Portal</h3>
+          <h4>Shine.com is Online Job and Recruitment Portal,
+            on which I have developed signup/login functionality.
+          </h4>
           <h4><span>Tech Stack:</span>React | Javascript | Html | CSS</h4>
         </div>
 
@@ -274,7 +280,7 @@
               ></a>
             </div>
             <a
-              href="Sagar_Wankhade_Resume.pdf"
+              href="img/Sagar_Wankhade_Resume.pdf"
               target="_blank"
               download="Sagar_Wankhade_Resume.pdf"
               class="portfolio__btn contact__btn"
